--- a/src/requirements/mariadb/Dockerfile
+++ b/src/requirements/mariadb/Dockerfile
@@ -5,15 +5,19 @@
 FROM debian:buster
 
 RUN apt-get update && \
-	apt-get install mariadb-server
+	apt-get install -y \
+	mariadb-server
 
+RUN rm /etc/mysql/mariadb.conf.d/50-server.cnf
 COPY conf/mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
+
+RUN mkdir -p /var/run/mysqld \
+	&& chown -R mysql:mysql /var/run/mysqld \
+	&& chmod 777 /var/run/mysqld
+
+EXPOSE 3306
 
 COPY tools/mariadb.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/mariadb.sh
 
-EXPOSE 3306
-
-ENTRYPOINT ["/usr/local/bin/mariadb.sh"]
-
-CMD ["mysql"]
+ENTRYPOINT [ "/usr/local/bin/mariadb.sh" ]
