--- a/src/requirements/wordpress/Dockerfile
+++ b/src/requirements/wordpress/Dockerfile
@@ -5,9 +5,10 @@
 FROM debian:buster
 
 RUN apt-get update && apt-get -y install \
-	wget \
 	curl \
-	php
+	php7.3-fpm \
+	php7.3-mysqli \
+	mariadb-client
 
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
 	&& chmod +x wp-cli.phar \
@@ -15,15 +16,14 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
 
 COPY conf/www.conf /etc/php/7.3/fpm/pool.d/
 
-RUN mkdir /run/php
+RUN mkdir -p /run/php
+RUN chmod 755 /run/php
 
-COPY tools/wordpress.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/wordpress.sh
-
-ENTRYPOINT ["/usr/local/bin/wordpress.sh"]
-
-WORKDIR /var/www/html/
+COPY ./tools/wp.sh /usr/local/bin/wp.sh
+RUN chmod +x /usr/local/bin/wp.sh
 
 EXPOSE 9000
 
-CMD ["/usr/sbin/php-fpm7.3", "-F"]
+WORKDIR /var/www/html/
+
+ENTRYPOINT [ "/usr/local/bin/wp.sh" ]
