--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,13 +2,12 @@
 #	_Dockerfile:mariadb                                                #
 #//////////////////////////////////////////////////////////////////////#
 
-FROM debian:buster
+FROM debian:10.11
 
 RUN apt-get update && \
 	apt-get install -y \
 	mariadb-server
 
-RUN rm /etc/mysql/mariadb.conf.d/50-server.cnf
 COPY conf/mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 
 RUN mkdir -p /var/run/mysqld \
@@ -19,5 +18,7 @@ EXPOSE 3306
 
 COPY tools/mariadb.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/mariadb.sh
+
+RUN mysql_install_db
 
 ENTRYPOINT [ "/usr/local/bin/mariadb.sh" ]
