--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,13 +5,13 @@ server {
 	ssl_certificate /etc/nginx/ssl/smiro.crt;
 	ssl_certificate_key /etc/nginx/ssl/smiro.key;
 
-	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_protocols TLSv1.3;
 
 	root /var/www/html;
 	index index.php index.html;
 
 	location / {
-		try_files $uri $uri/ =404;
+		try_files $uri /index.php?$args;
 	}
 
 	location ~ \.php$ {
