--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,7 +2,7 @@
 #	_Dockerfile:wordpress                                              #
 #//////////////////////////////////////////////////////////////////////#
 
-FROM debian:buster
+FROM debian:10.11
 
 RUN apt-get update && apt-get -y install \
 	curl \
