--- a/srcs/.env
+++ b/srcs/.env
@@ -4,6 +4,7 @@ MYSQL_HOSTNAME=mariadb
 MYSQL_DATABASE=smirodb
 MYSQL_USER=smiro
 MYSQL_PASSWORD=smiro1234
+MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=smiro1234
 
 WORDPRESS_TITLE=SmiroPage
